cabal-version:      2.4
name:               raytracer
version:            0.2.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             E. G. Bland
maintainer:         liz@flompy.zone

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable raytracer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules: Raylude, Vector3, World

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, JuicyPixels
    hs-source-dirs:   app
    default-language: Haskell2010
