cabal-version:      3.0
name:               raytracer
version:            0.3.1.0
-- synopsis:
-- description:
homepage:           https://flompy.zone/codingfen/projects/raytracer
license:            MIT
license-file:       LICENSE
author:             E. G. Bland
maintainer:         liz@flompy.zone
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable raytracer
    ghc-options: -static -O2 -Wall
    main-is:          Main.hs
    other-modules:    Raylude, Vector3, World, Material
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, JuicyPixels, random
    hs-source-dirs:   app
    default-language: Haskell2010
